--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Git Lesson</title>
-</head>
-<body>
-    <h1>Lesson git :)</h1>
+
+    <p>This is a lesson in gitHub trial</p>
+
+    <script src = "app.js"></script>
 </body>
 </html>
