added a link and background color and font color

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Git Lesson</title>
+    <h1>Git の　レッスン
 
-    <p>This is a lesson in gitHub trial</p>
+    </h1>
+    <p> これは　gitHub　の　レッスン
+    </p>
 
     <script src = "app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
